--- a/new.html
+++ b/new.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>Name a better header
-    <title>...I'll wait</title>
+<head>
+    <title>Student Bio</title>
 </head>
 <body>
-    <h1>I am a very funny guy</h1>
-
+    <h1>Student Bio</h1>
+    <p>My name is Ben Resnicoff and I am a rising freshman in college. I went to New Trier HS in Winnetka, IL and will attend Georgetown U after my gap year.</p>
+<div>
+    <h2>Contact Info</h2>
+    <p>Phone = 847-532-5459</p>
+    <p>Email = benjaminresnicoff@icloud.com</p>
+</div>
 </body>
 
 </html>
